# pagure-haskell

./: .gitignore  API.md  README.md  generate-api-markdown.sh  generateDocs.hs  pagure.cabal  upload-docs.sh
src/Web/: Pagure.hs
src/Web/Pagure/: Common.hs  Extras.hs  Issues.hs  Lens.hs  Projects.hs  PullRequests.hs  Types.hs  Users.hs
src/Web/Pagure/Internal/: Wreq.hs
src/Web/Pagure/Types/: Issue.hs  Project.hs  User.hs
src/cli/: Main.hs
src/cli/Pagure/CLI/: Command.hs
src/cli/Pagure/CLI/Command/: Groups.hs  User.hs  Users.hs
