name:                pagure
version:             0.1.0.0
synopsis:            A Haskell client to the Pagure API
description:         A Haskell client to the Pagure API. Currently targets
                     API version 0.
homepage:            https://pagure.io/pagure-haskell
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          relrod@redhat.com
copyright:           (c) 2015 Red Hat, Inc.
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 1.10

library
  exposed-modules:
      Web.Pagure.Types
    , Web.Pagure.Internal.Wreq
    , Web.Pagure.Extras
    , Web.Pagure
  -- other-modules:
  -- other-extensions:
  build-depends:       aeson >= 0.7 && < 1
                     , base >= 4 && < 5
                     , bytestring >= 0.9 && < 1
                     , lens >= 4 && < 5
                     , lens-aeson >= 1 && < 2
                     , text >= 1 && < 2
                     , transformers >= 0.3 && < 1
                     , wreq >= 0.3 && < 1
  hs-source-dirs:      src
  default-language:    Haskell2010