name:                pagure
version:             1.0.0.0
synopsis:            A Haskell client to the Pagure API
description:         A Haskell client to the Pagure API using Servant.
homepage:            https://pagure.io/pagure-haskell
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          relrod@redhat.com
copyright:           (c) 2016 Red Hat, Inc.
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:
      Web.Pagure
    , Web.Pagure.Common
    , Web.Pagure.Extras
    , Web.Pagure.Lens
    , Web.Pagure.Users

  build-depends:       aeson >= 0.7 && < 1
                     , base >= 4 && < 5
                     , http-client >= 0.4 && < 0.5
                     , http-client-tls >= 0.2 && < 0.3
                     , lens >= 4 && < 5
                     , lens-aeson >= 1 && < 2
                     , servant >= 0.7 && < 1
                     , servant-client >= 0.7 && < 1
                     , servant-docs >= 0.7 && < 1
                     , servant-js >= 0.7 && < 1
                     , text >= 1 && < 2
                     , transformers >= 0.3 && < 1
                     , unordered-containers >= 0.2 && < 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

executable git-pagure
  main-is:             Main.hs
  hs-source-dirs:      src/cli
  build-depends:       base >= 4 && < 5
                     , lens >= 4 && < 5
                     , optparse-applicative >= 0.11 && < 0.13
                     , text >= 1 && < 2
                     , pagure
  default-language:    Haskell2010